--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -16,12 +16,13 @@ serde_json = "1.0"
 walkdir = "2.4"
 sha2 = "0.10"
 async_zip = { version = "0.0.16", features = ["tokio"] }
-tokio-util = { version = "0.7", features = ["io"] }
+tokio-util = { version = "0.7", features = ["io", "compat"] }
 futures = "0.3"
 anyhow = "1.0"
 thiserror = "1.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+zip = "6.0.0"
 
 [dev-dependencies]
 tempfile = "3.8"
