--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -23,6 +23,7 @@ thiserror = "1.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 zip = "6.0.0"
+stl-thumb = "0.5"
 
 [dev-dependencies]
 tempfile = "3.8"
