--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,5 +19,6 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
+  "exclude": ["**/*.test.tsx", "**/*.test.ts", "tests"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
