feat: implement composite preview image generation
Implemented full composite preview feature as specified in COMPOSITE_PREVIEW_SPEC.md

Backend Changes:

1. Dependencies:
   - Added 'image' crate (v0.24) for image processing

2. New Service - CompositePreviewService:
   - Generates 2x2 grid composite from up to 4 images
   - Supports 1-4 images with different layouts
   - Resizes images to 400x400 each
   - Creates 800x800 composite PNG
   - Stores in cache/previews/ directory

3. Database:
   - Added migration 004: project_previews table
   - Stores preview path, image count, source IDs
   - Foreign key to projects with CASCADE delete
   - Index on project_id for fast lookups

4. Repository - PreviewRepository:
   - CRUD operations for preview metadata
   - JSON serialization of source image IDs
   - Query previews by project
   - Cleanup methods

5. Scanner Integration:
   - with_composite_preview() builder method
   - Generates previews for ALL projects (not just STL folders)
   - Runs after image inheritance (third pass)
   - Requires minimum 2 images per project

6. Rescan Integration:
   - with_composite_preview() builder method
   - Regenerates previews on rescan
   - Deletes previews if < 2 images remain
   - Tracks files_added/files_updated counts

7. API Endpoint:
   - GET /api/projects/:id/preview
   - Returns PNG image with cache headers
   - 404 if no preview exists
   - Streams file content

8. AppState Updates:
   - Added preview_repo to state
   - Initialized services with cache_dir
   - Wire up dependencies

Features:
✅ Generate composites during scan
✅ Generate composites during rescan
✅ 2x2 grid layout for 4 images
✅ Responsive layouts for 1-3 images
✅ Cache in /app/cache/previews/
✅ API endpoint for serving previews
✅ Database tracking of preview metadata
✅ Image processing with Lanczos3 filtering
✅ Error handling and logging
✅ Works for parent folders (not just STL folders)

Testing:
✅ Compiled successfully
✅ Migration applied
✅ Preview generat

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -24,6 +24,7 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 zip = "6.0.0"
 stl-thumb = "0.5"
+image = "0.24"
 
 [dev-dependencies]
 tempfile = "3.8"
