Fix root path configuration: Remove Library Configuration page, enforce env-based config, mount example directory in Docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     environment:
       - DATABASE_PATH=/app/data/glyptotheka.db
       - CACHE_DIR=/app/cache
+      - ROOT_PATH=/projects
       - RUST_LOG=info,glyptotheka_backend=debug
     restart: unless-stopped
 
