feat: Integrate local stl-thumb for preview generation during scanning
Switched from crates.io stl-thumb to local version from ~/Workspace/stl-thumb
to use the latest updates and enable custom modifications.

## Changes

**Backend Integration:**
- Updated backend/Cargo.toml to use path dependency: `stl-thumb = { path = "/home/stefffri/Workspace/stl-thumb" }`
- Updated stl_preview.rs to use new API: `stl_filename` → `model_filename`
- Maintained compatibility with existing preview generation during scanning

**STL-Thumb Compatibility:**
- Temporarily pinned image dependency to 0.24 in local stl-thumb for Rust 1.83.0 compatibility
- Updated Cargo.lock with new dependency tree

**Preview Generation Features:**
- Automatic generation during library scanning
- First 2 STL files generated synchronously (immediate availability)
- Remaining files queued for async background generation
- Smart caching based on file modification times
- 512x512 PNG thumbnails with headless rendering
- Database tracking of preview paths and timestamps

**Documentation:**
- Added STL_THUMB_INTEGRATION.md with comprehensive integration guide
- Removed outdated testing documentation
- Updated backend Dockerfile

## Testing

Build successful:
```
cargo build --release
Finished `release` profile [optimized] target(s) in 7.46s
```

## Benefits

- Use latest stl-thumb features and improvements
- Faster iteration on preview generation enhancements
- Custom modifications for project-specific needs
- Automatic preview generation during scanning (no manual steps)

Fork: https://github.com/steffenfriedrich0481/stl-thumb

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -23,7 +23,7 @@ thiserror = "1.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 zip = "6.0.0"
-stl-thumb = "0.5"
+stl-thumb = { path = "/home/stefffri/Workspace/stl-thumb" }
 image = "0.24"
 
 [dev-dependencies]
