--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -23,7 +23,7 @@ thiserror = "1.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 zip = "6.0.0"
-stl-thumb = { path = "/home/stefffri/Workspace/stl-thumb" }
+stl-thumb = { git = "https://github.com/steffenfriedrich0481/stl-thumb" }
 image = "0.24"
 
 [dev-dependencies]
