feat: Polish search refinement and optimize performance
- Implemented batch image fetching in backend to solve N+1 query problem
- Added accessibility features to SearchTileCarousel (keyboard nav, ARIA)
- Added loading skeletons and error handling for images
- Optimized frontend performance with React.memo and CSS containment
- Added frontend testing dependencies and tests

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -28,6 +30,7 @@
     "eslint": "^8.57.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "jsdom": "^27.2.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
     "typescript": "^5.9.3",
