chore: Update configuration for ignored keywords
- Added IGNORED_KEYWORDS to .env.example
- Added IGNORED_KEYWORDS to docker-compose.yml with defaults

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - CACHE_DIR=/app/cache
       - ROOT_PATH=/projects
       - RUST_LOG=info,glyptotheka_backend=debug
+      - IGNORED_KEYWORDS=${IGNORED_KEYWORDS:-PRESUPPORTED_STL,STL,UNSUPPORTED_STL,Unsupported,Pre-Supported}
     restart: unless-stopped
 
   frontend:
