--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,10 @@ CACHE_DIR=/app/cache
 # Logging level
 RUST_LOG=info,glyptotheka_backend=debug
 
+# Ignored keywords for search display names (comma-separated)
+# Folders matching these names will be skipped when displaying project names in search results
+IGNORED_KEYWORDS=PRESUPPORTED_STL,STL,UNSUPPORTED_STL,Unsupported,Pre-Supported
+
 # Optional: Backend port (default 3000)
 # BACKEND_PORT=3000
 
