feat: implement keyword containment checking for STL category folders
- Add substring matching for ignored keywords (case-insensitive, trimmed)
- Update scanner to traverse up past STL category folders
- Folders like '1 inch', '2 inch', '40 mm' now treated as STL categories
- Applied same logic to RescanService
- Updated .env.example with comprehensive documentation
- Completed tasks T061-T064 in Phase 6

--- a/.env.example
+++ b/.env.example
@@ -14,9 +14,12 @@ CACHE_DIR=/app/cache
 # Logging level
 RUST_LOG=info,glyptotheka_backend=debug
 
-# Ignored keywords for search display names (comma-separated)
-# Folders matching these names will be skipped when displaying project names in search results
-IGNORED_KEYWORDS=PRESUPPORTED_STL,STL,UNSUPPORTED_STL,Unsupported,Pre-Supported
+# Ignored keywords for search display names and STL categorization (comma-separated)
+# Folders matching these keywords (case-insensitive, substring match) will be:
+# 1. Skipped when displaying project names in search results
+# 2. Treated as STL category folders (not separate projects) during scanning
+# Examples: "1 inch", "2 inch", "40 mm" folders will be categories under their parent project
+IGNORED_KEYWORDS=PRESUPPORTED_STL,STL,UNSUPPORTED_STL,Unsupported,Pre-Supported,inch,mm
 
 # Optional: Backend port (default 3000)
 # BACKEND_PORT=3000
