fix: add NODE_OPTIONS to CI test environment for webidl compatibility

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,3 +81,5 @@ jobs:
       - name: Run tests
         working-directory: ./frontend
         run: npm test -- --run
+        env:
+          NODE_OPTIONS: --no-experimental-fetch
