--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [ main, '001-3d-print-library' ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
